<resources>
    <string name="app_name">MyLoginPart</string>
    <string name="text_regist_content">Зарегистрироваться</string>
    <string name="regist_email_placeholder">Электронная почта</string>
    <string name="regist_password_placeholder">Пароль</string>
    <string name="regist_repeatpass_placeholder">Повторите пароль</string>
    <string name="text_login_button">Войти</string>
    <string name="Regist_text_button">Регистрация</string>
    <string name="LogIn_text_button">Вход</string>
    <string name="logo_decription">logo</string>
    <string name="log_in_decription">log_in</string>
    <string name="regist_decription">regist</string>
    <string name="username_placeholder">Имя пользователя</string>
    <string name="avatar_decription">avatar</string>
    <string name="background_user_decription">userBack</string>
    <string name="rating_placeholder">5.0</string>
    <string name="rating_star_decription">ratingStar</string>
    <string name="users_decription">Пользователи</string>
    <string name="teams_decription">Команды</string>
    <string name="projects_decription">Проекты</string>
    <string name="search_hint">Поиск</string>
    <string name="user_old">Возраст</string>
    <string name="icon">Иконка</string>
    <string name="education_placeholder">Инстиут</string>
    <string name="dividing_line">Линия</string>
    <string name="about_yourself">О себе:…</string>
    <string name="tags">#Теги</string>
    <string name="projects_list">Проекты:</string>
    <string name="add_photo_decription">ДобавитьФото</string>
    <string name="real_name_placeholder">Имя</string>
    <string name="real_surname_placeholder">Фамилия</string>
    <string name="city_placeholder">Город</string>
    <string name="edu_placeholder">Образование</string>
    <string name="oldness_placeholder">Возраст</string>
    <string name="about_yourself_placeholder">О себе</string>
    <string name="project_name_placeholder">Название проекта</string>
    <string name="geolocation_placeholder">Екатеринбург</string>
    <string name="geolocation_description">Екатеринбург</string>
    <string name="category_description">КатегорияПроекта</string>
    <string name="category_placeholder">Категория Проекта</string>
    <string name="views_placeholder">Количество Просмотров</string>
    <string name="views_description">КоличествоПросмотров</string>
    <string name="project_owner_description">СоздательПроекта</string>
    <string name="project_owner_placeholder">Создатель Проекта</string>
    <string name="about_project_placeholder">О проекте:…</string>
    <string name="participants_list">Участники:</string>
    <string name="projects_types_descriptions">Вид</string>
    <string name="project_type_it">IT</string>
    <string name="project_type_social">Social</string>
    <string name="project_type_creative">Creative</string>
    <string name="projects_types_sports">Sports</string>
</resources>
